--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
 	<groupId>org.springframework</groupId>
 	<artifactId>spring-context</artifactId>
-	<version>5.1.9.RELEASE</version>
+	<version>2.0.5</version>
     </dependency>
     
   </dependencies>
